<resources>
    <string name="app_name">splash</string>
    <string name="quiz_text">QUIZ APP</string>
    <string name="user_text">Enter your name </string>
    <string name="start_quiz">Start Quiz </string>
    <string name="quiz_questions">Question 1:In what Year did the united states host FIFA worldcup for firsttime? </string>
    <string name="MCQ1">1986 </string>
    <string name="MCQ2">1994 </string>
    <string name="MCQ3">2002 </string>
    <string name="MCQ4">2010 </string>
    <string name="Next">Next </string>
    <string name="Previous">Previous </string>
    <string name="score">"Your Score: 0/1 </string>
    <string name="share">"Share Score </string>
</resources>